2.8.2 (16-01-2020)
- Fix: RAIDES - excluded registrations by protocol (graduated list)

2.8.1 (08-01-2020)
- Improvement: added missing resources (EN)
- Fix: removed the branch mapping of the generic RAIDES mappings

2.8.0 (06-01-2020)
- Improvement: support to RAIDES19

2.7.7 (17-12-2019)
- Refactor: upgraded fenixedu-academic-core dependency

2.7.6 (03-12-2019)
- Fix: A3es teachers upload bean materialization fix when submitted json object too large

2.7.5 (26-11-2019)
- Fix: teachers competence courses are now correctly displayed

2.7.4 (12-11-2019)
- Improvement: changed multiplicity of A3esProcess-DegreeCurricularPlan relation to 1-many

2.7.3 (25-10-2019)
- Fix: changed getName method implementation on A3ESProcess to return identifier
- Fix: added enum type to map specialist title (due to A3ES platform integration API change)

2.7.2 (18-10-2019)
- Improvement: added support for other level on qualitification
- Improvement: added a3es instance automatic initialization
- Fix: Calculation of teaching hours for A3es process is now based on competence course load
- Fix: unaligned coluns when exporting A3es teacher processes to excel 
- Refactor: moved legal settings a3es url to a3es specific configuration 

2.7.1 (16-10-2019)
- Fix: Calculation of teaching hours for A3es process

2.7.0 (10-10-2019)
- New Feature: Added A3es PAPNCE process support
- Fix: Changed A3es ACEF process integration to comply with new API

2.6.4 (26-09-2019)
- Refactor: upgraded fenixedu-academic-core dependency

2.6.3 (25-09-2019)
- Fix: A3es research unit filiation limit changed

2.6.2 (19-09-2019)
- Fix: A3es published work limit changed

2.6.1 (26-07-2019)
- Refactor: upgraded fenixedu-academic-core dependency

2.6.0 (23-07-2019)
- Refactor: removed ulisboa-specifications dependency

2.5.0 (09-07-2019)
- Fix: A3es teaching services degrees sort order changed
- Fix: A3es courses upload fixed due to API changes regarding the curricular unit name