@@ -1,3 +1,5 @@
+- Fix: Branch code in degree courses was being reported incorrectly to RAIDES (#UL-ISA-1176)
+
 2.8.2 (16-01-2020)
 - Fix: RAIDES - excluded registrations by protocol (graduated list)
 
